fix/ui: make results not overlap with buttons on results page

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -94,6 +94,6 @@ img {
 
 #scanResultsText {
     -webkit-user-select: text;
-    height: 65vh;
+    height: 60vh;
     width: 100%;
 }
